content changes and mobile css changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>ARL STRONG - UMass Lowell</title>
+		<title>STRONG | Trust-NEARCHAT</title>
 	</head>
 	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
 		<form name="contact-form" action="/" netlify hidden>
 			<label htmlFor="name">Name</label>
 			<input className="text-input w-full col-span-3" id="name" type="text" name="name" />
@@ -26,7 +28,5 @@
 			<label htmlFor="message">Your Message</label>
 			<textarea className="text-input w-full col-span-3 min-h-[2.625rem]" id="message" type="text" name="message"></textarea>
 		</form>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
 	</body>
 </html>
