--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<form name="contact-form" action="/" netlify hidden>
+		<form name="contact-form" action="/" netlify netlify-honeypot="bot-field" hidden>
 			<label htmlFor="name">Name</label>
 			<input className="text-input w-full col-span-3" id="name" type="text" name="name" />
 			<label htmlFor="email">Email Address</label>
