research outcomes modification

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Website for the Army Research Lab STRONG team at the University of Massachusetts Lowell"
+			content="Website for Trust-NEARCHAT of STRONG program under the U.S. Army Research Lab"
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
